[package]
name = "sturm_engine"
version = "0.1.0"
edition = "2021"
author = "Freak32768 <freak32768@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.4"
[dependencies.sdl2]
sdl2 = "0.35.0"
default-features = false
features = ["image", "mixer", "ttf", "gfx"]
